# nanochronometer

./: .gitignore  ANDROID_ARM64_BACKENDS.md  ARCH_MAIN_SPLIT.md  ARM64_WINDOWS_BUILD_FIX.md  ASM_STABLE_CLOCK_NOTES.md  BUILD_FIX_0.5.6.md  CMakeLists.txt  CMakeLists.txt.bak  GUI_SAFE_START.md  NANOCLOCK_AND_WRAPPER_OVERHEAD.md  PRECISION_CLOCK_APP.md  README.md  SIDECHANNEL_AUDIT.md  STABLE_CLOCK_CALIBRATION_HFT.md  TERMUX_ANDROID_CLI.md  THIRD_PARTY_NOTICES.md  TIMER_BACKENDS.md  UNIFIED_DISPATCH_AND_INSTRUCTION_TOOLKIT.md  app.rc  bench_kernels.c  bench_kernels.h  bench_kernels_avx2.c  build_all.bat  check_font_name.py  compat_msvcrt.c  demo.c  diag_font.bat  gen_ico.py  main.c  main_arm64.c  main_x64.c  nanochrono.c  nanochrono.h  nanochrono_avx.asm  nanochrono_avx.def  nanochrono_cli.c  nanochrono_legacy.asm  nanochrono_legacy.def  resource.h
.repo/: TRACE_FILE
asm/arm64/android/: README.md  nanochrono_arm64_sve.S  nanochrono_arm64_sve2.S  nanochrono_instruction.S
asm/arm64/linux/: nanochrono_arm64_scalar.S  nanochrono_arm64_sme.S  nanochrono_microbench_generated.S
asm/arm64/windows/: nanochrono_arm64_neon.S  nanochrono_arm64_scalar.S  nanochrono_arm64_sme2.S  nanochrono_instruction.S  nanochrono_microbench_generated.S
asm/x64/linux/: nanochrono_avx.asm  nanochrono_avx2.asm  nanochrono_avx512.asm  nanochrono_avx512_vnni.asm  nanochrono_avx_vnni.asm  nanochrono_f16c.asm  nanochrono_fma.asm  nanochrono_instruction.asm  nanochrono_legacy.asm  nanochrono_mmx.asm  nanochrono_sse.asm  nanochrono_sse2.asm  nanochrono_sse3.asm  nanochrono_sse41.asm  nanochrono_sse42.asm  nanochrono_ssse3.asm
asm/x64/windows/: bench_kernels_asm.asm  nanochrono-avx_vnni.asm  nanochrono_avx.asm  nanochrono_avx2.asm  nanochrono_avx512.asm  nanochrono_avx512_vnni.asm  nanochrono_avx_vnni.asm  nanochrono_f16c.asm  nanochrono_fma.asm  nanochrono_legacy.asm  nanochrono_microbench_generated.asm  nanochrono_mmx.asm  nanochrono_sse.asm  nanochrono_sse2.asm  nanochrono_sse3.asm  nanochrono_sse4.asm  nanochrono_sse41.asm  nanochrono_sse42.asm  nanochrono_ssse3.asm
assets/font/: README.md
python/: nanoclock_ctypes_overhead.py
python/nanochronometer/: __init__.py  core.py
scripts/: build_android_arm64-libs-for-apk.sh  build_android_termux_cli.sh  build_linux_ninja_arm64.sh  build_linux_ninja_x64.sh  build_linux_unix_makefiles_arm64.sh  build_linux_unix_makefiles_x64.sh  build_mingw_ninja_arm64.sh  build_mingw_ninja_x64.sh  build_mingw_unix_makefiles_arm64.sh  build_mingw_unix_makefiles_x64.sh  build_msvc_ninja_arm64.bat  build_msvc_ninja_x64.bat  build_termux_arm64_cli.sh  nc_build_common.sh
src/: nanochrono_arm64_x86_compat.c  nanochrono_instruction.c  nanochrono_runtime.c  nanochrono_sidechannel.c
src/platform/android/: nanochrono_android.c
wrappers/: README.md
wrappers/csharp/Example/: Program.cs
wrappers/csharp/NanoChronometer/: NanoChronometer.cs
wrappers/go/: go.mod
wrappers/go/examples/overhead/: main.go
wrappers/go/nanochrono/: nanochrono.go
wrappers/java/: pom.xml
wrappers/java/src/main/java/io/nanochronometer/: NanoChronometer.java  OverheadExample.java
wrappers/lua/: nanochronometer.lua  overhead.lua
wrappers/nodejs/: index.js  package.json
wrappers/nodejs/examples/: overhead.js
wrappers/python/: overhead_ctypes.py
wrappers/rust/: Cargo.toml  build.rs
wrappers/rust/examples/: overhead.rs
wrappers/rust/src/: lib.rs
wrappers/zig/: build.zig  nanochronometer.zig  overhead.zig
