[package]
name = "nanochronometer"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust FFI wrapper for NanoChronometer"

[features]
default = []
static = []

[lib]
name = "nanochronometer"
path = "src/lib.rs"

[[example]]
name = "overhead"
path = "examples/overhead.rs"
